src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Geos_supported__c</fullName>
        <inlineHelpText>Which Geo’s partner has offices &amp; sales support</inlineHelpText>
        <label>Geo&apos;s Supported</label>
        <picklist>
            <picklistValues>
                <fullName>Australia New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gift_Policy__c</fullName>
        <inlineHelpText>Does this account have a policy against gifts from vendors?</inlineHelpText>
        <label>Gift Policy</label>
        <picklist>
            <picklistValues>
                <fullName>No Gifts of Any Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing over $500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing over $250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing over $100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing over $50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing over $25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Alliance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Alliance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GuideWire_Employee_Referral__c</fullName>
        <inlineHelpText>Tell us who you work closely with at Guidewire</inlineHelpText>
        <label>GuideWire Employee Referral</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Headquarters__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is the headquarters, check this box. This will then be the parent account for any other subsidiaries/locations.</inlineHelpText>
        <label>Headquarters?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_Billing_Country__c</fullName>
        <label>Historic Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historic_Billing_State__c</fullName>
        <label>Historic Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeInCustomer__c</fullName>
        <description>This field is maintained by Brad Baldwin.</description>
        <inlineHelpText>This field is maintained by Brad Baldwin.</inlineHelpText>
        <label>Include in customer count</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field identifies who the Inside Sales Rep is for that account (US ONLY)</inlineHelpText>
        <label>Inside Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InsuranceSuite_Customer__c</fullName>
        <formula>Not_Guidewire_Live__c&gt;2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InsuranceSuite Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Integrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Method__c</fullName>
        <label>Invoice Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Customer__c</fullName>
        <description>No longer used.</description>
        <formula>Num_Customer_Stories__c &gt; 0 || Num_Products__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this account has at least 1 product or customer story attached</inlineHelpText>
        <label>Is Customer  (Do not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of CPQ for the User Story 1 in Track 2.</description>
        <label>Is New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JT_Power_Ranking__c</fullName>
        <inlineHelpText>Rank calculated based on products purchased and direct premiums</inlineHelpText>
        <label>Power Ranking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_Customer_Names__c</fullName>
        <label>Joint Customer Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Joint_Customers__c</fullName>
        <inlineHelpText>How many total joint customers do we have</inlineHelpText>
        <label>Joint Customers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_Implementations__c</fullName>
        <label>Joint Implementations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_Integrations__c</fullName>
        <inlineHelpText>How many customers have you integrated your solution with Guidewire</inlineHelpText>
        <label>Joint Integrations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_People__c</fullName>
        <label>Other Key People</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOBNEW__c</fullName>
        <inlineHelpText>Field maintained by Brad Baldwin.</inlineHelpText>
        <label>LOBs</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers Compensation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LOB_s__c</fullName>
        <label>LOB&apos;s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOBs__c</fullName>
        <label>LOB Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial - Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Bus. Owner’s Policy (BOP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Crime/public liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Dir. &amp; Officers Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Excess &amp; Surplus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - General Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Inland Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Medical Malpractice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Mortgage (LMI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Multi-peril</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Ocean Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Package Policy (CPP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Political risks &amp; conting.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Professional Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Surety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Umbrella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life &amp; Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal - Accident &amp; Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal - Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal - Boat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal - Compulsory Third Party (CTP)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Contact__c</fullName>
        <label>Last Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_a_Reference_was_fulfilled__c</fullName>
        <label>Last Date a Reference was Fulfilled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_SFDC2_Id__c</fullName>
        <description>Traction on Demand. Created to track legacy salesforce id&apos;s</description>
        <label>Legacy SFDC2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Source__c</fullName>
        <description>The source where the load came from.</description>
        <label>Load Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Address__c</fullName>
        <label>Local Language Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logo_Approved_for_Use__c</fullName>
        <label>Logo Approved for Use?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Ratio__c</fullName>
        <label>Loss Ratio &amp; LAE Ratio</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPL_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPL Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPL_SalesReps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Agency/Broker customer portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing electronic payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Repair, Replacement &amp; Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Document management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Experience Management/CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud detection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk assessment/risk management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales and Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security encryption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless/mobile technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Outreach__c</fullName>
        <inlineHelpText>What vendors we have used to reach out to this account.</inlineHelpText>
        <label>Marketing Outreach</label>
        <picklist>
            <picklistValues>
                <fullName>BAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Target__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>An insurer that could potentially buy or influence the purchase of Guidewire.  The company must be a real operation.  Either underwrites policies and/or has a claims department. Does not need to have budget authority or decision making power.</inlineHelpText>
        <label>Marketing Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Premiums__c</fullName>
        <inlineHelpText>The higher of Direct and Net Premiums; used for filtering and sorting companies based on size.</inlineHelpText>
        <label>Max Premiums</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NDA_Date_Expires__c</fullName>
        <label>NDA Date Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Date_Signed__c</fullName>
        <label>NDA Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Expiration__c</fullName>
        <label>NDA Expiration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Signed__c</fullName>
        <label>NDA Signed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Premiums__c</fullName>
        <label>Net Premiums</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Not_Guidewire_Live__c</fullName>
        <label>Not Guidewire Live</label>
        <summaryFilterItems>
            <field>Product__c.Products__c</field>
            <operation>equals</operation>
            <value>BillingCenter, ClaimCenter, PolicyCenter</value>
        </summaryFilterItems>
        <summaryForeignKey>Product__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Customer_Stories__c</fullName>
        <label>Num Customer Stories</label>
        <summaryForeignKey>Customer_Story_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Products__c</fullName>
        <label>Num Products</label>
        <summaryForeignKey>Product__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Open_Opportunities__c</fullName>
        <label># Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <label># of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_won_opps__c</fullName>
        <label># of Won Opps</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Benchmarking_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Benchmarking Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Billing_Systems__c</fullName>
        <label>Other Billing Systems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Claims_Systems__c</fullName>
        <label>Other Claims Systems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Policy_Systems__c</fullName>
        <label>Other Policy Systems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OverallDWP__c</fullName>
        <formula>IF( DWP_Exchange_Rate__c==0 , 0, (Overall_DWP_Local__c /DWP_Exchange_Rate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall DWP (in Millions US$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverallDWP_del__c</fullName>
        <inlineHelpText>The higher of Direct and Net Premiums; used for filtering and sorting companies based on size.  Field maintained by Brad Baldwin.</inlineHelpText>
        <label>Overall DWP (in Millions US$) - delete</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_DWP_Local__c</fullName>
        <label>Overall DWP (in Millions Local Currency)</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Letter_Campaign_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for any Account that should be excluded from the PolicyCenter letter camapign starting April 2009.</description>
        <inlineHelpText>Check box for any Account that should be excluded from the PolicyCenter letter camapign starting April 2009.</inlineHelpText>
        <label>PC Letter Campaign Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Practice_Size_Scale__c</fullName>
        <label>P&amp;C Practice Size &amp; Scale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Currency__c</fullName>
        <description>Text Equivalent of Project Currency (to be displayed on account)</description>
        <formula>TEXT( CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text Equivalent of Project Currency (to be displayed on account)</inlineHelpText>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_id__c</fullName>
        <externalId>true</externalId>
        <label>Participant ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Date_Expires__c</fullName>
        <label>Partner Agreement Date Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Agreement_Date_Signed__c</fullName>
        <label>Partner Agreement Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Contract_Comments__c</fullName>
        <label>Partner Contract Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <label>Partner Status</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Reference_Activity__c</fullName>
        <label>Past Reference Activity</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platinum_Additional_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Platinum_Additional_Notes_Exist</description>
        <label>Platinum Additional Notes Exist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platinum_Manager_Review_Date__c</fullName>
        <description>Platinum Manager Review Date</description>
        <label>Platinum Manager Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Platinum_Managers_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Platinum_Managers_Notes_Exist</description>
        <label>Platinum Managers Notes Exist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platinum_Sheet_Last_Updated__c</fullName>
        <label>Platinum Sheet Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PolicyCenter__c</fullName>
        <label>PolicyCenter</label>
        <summarizedField>Opportunity.PolicyCenter__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Reference_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Reference Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Business Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_System_Count__c</fullName>
        <label>Production System Count</label>
        <summaryForeignKey>ProductionSystem__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Products_Purchased__c</fullName>
        <label>Products Purchased</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MiAgents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millbrook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile &amp; Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards-based Templates</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Prospective_Partner_Type__c</fullName>
        <description>populated by web form based on the lead origin</description>
        <inlineHelpText>What type of partner is this lead interested in applying for</inlineHelpText>
        <label>Prospective Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>PartnerConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolutionConnect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>CPQ Track2 - US1</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <inlineHelpText>This field drives Customer inactivation process in Financial System. Default = Active.</inlineHelpText>
        <label>Record Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Details__c</fullName>
        <inlineHelpText>Information about reference status.</inlineHelpText>
        <label>Reference Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>